# TeleaMedicalQtApp

./: Dockerfile  README.md
qphysio-new/: CMakeLists.txt
qphysio-new/qml/: AddInfoView.qml  ElettrodiView.qml  GuantiView.qml  InfoView.qml  LangView.qml  Main.qml  Mainmenu.qml  ManipoloView.qml  Menu.qml  StartView.qml
qphysio-new/src/: ApplicationSettings.cpp  ApplicationSettings.h  Revisions.json  TranslationManager.h  main.cpp
qphysio-new/translations/: app_en.qm  app_en.ts  app_it.qm  app_it.ts
